# web-app-hub

./: CHANGELOG.md
assets/config/browsers/: brave.yml  chrome.yml  chromium.yml  firefox.yml  floorp.yml  ungoogled-chromium.yml  vivaldi.yml
assets/config/profiles/firefox/chrome/: userChrome.css
assets/desktop/: org.pvermeer.WebAppHub.metainfo.xml
flatpak/: build.sh  cargo-sources.json  org.pvermeer.WebAppHub.yml
workspaces/app/: Cargo.toml  build.rs
workspaces/app/credits/: documentation.yml  translations.yml
workspaces/app/src/: application.rs
workspaces/app/src/application/pages/: web_apps.rs
workspaces/app/src/application/pages/web_apps/: web_app_view.rs
workspaces/app/src/application/pages/web_apps/web_app_view/: icon_picker.rs
workspaces/app/src/application/window/view/: about.rs
workspaces/app/translations/: it.yml
workspaces/common/src/: app_dirs.rs  assets.rs  browsers.rs  desktop_file.rs
workspaces/tools/src/: release.rs
